# template-python-fastapi-repo

./: .coveragerc  .env.example  .flake8   .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.py  test_main.py
.github/workflows/: ci.yml
template_python_fastapi_repo/: main.py  settings.py  test_main.py
