[tool.poetry]
name = "template-python-fastapi-repo"
version = "0.1.0"
description = "A template repo for modern python FastAPI apps"
authors = ["chrishart0 <64378248+chrishart0@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"          # https://pypi.org/project/requests/ 
httpx = "^0.28.1"             # https://pypi.org/project/httpx/
pydantic = "^2.10.6 "         # https://pypi.org/project/pydantic/
pydantic-settings = "^2.8.1"  # https://pypi.org/project/pydantic-settings/
loguru = "^0.7.3"             # https://pypi.org/project/loguru/
fastapi = "^0.115.11"         # https://pypi.org/project/fastapi/
uvicorn = "^0.34.0"           # https://pypi.org/project/uvicorn/
rq = "^2.1.0"                 # https://pypi.org/project/rq/

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"         # https://pypi.org/project/pre-commit/
black = "^25.1.0"             # https://pypi.org/project/black/
flake8 = "^7.1.2"             # https://pypi.org/project/flake8/
pytest = "^8.3.5"             # https://pypi.org/project/pytest/
pytest-cov = "^6.0.0"         # https://pypi.org/project/pytest-cov/

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
